made migrations and models

--- a/views/home.erb
+++ b/views/home.erb
@@ -4,20 +4,17 @@
     <link rel="stylesheet" href="main.css">  
     <div id="logo">
         <img src="Team App (2).png" alt="logo" style=" width: 170px; height:170px">
- 
-    </div>
+</head>
+<body>
+</div>
     <div id="nav">
 <ul>
- <li><a href="home.erb"style="color: white">Home</a></li>
- <li><a href="profile.erb"style="color: white">Profile</a></li>
-      <li><a href="about.erb"style="color: white">About</a></li>
-      <li><a href="signup.erb"style="color: white">SignUp</a></li>
- <li><a href="login.erb"style="color: white">LogIn</a></li>
+ <li><a href="/"style="color: white">Home</a></li>
+ <li><a href="/profile"style="color: white">Profile</a></li>
+ <li><a href="/signup"style="color: white">SignUp</a></li>
+ <li><a href="/login"style="color: white">LogIn</a></li>
 </ul>
 </div>
-
-    </head>
-<body>
    
 </body>
     </html>
