--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,6 @@ img{
 position: absolute;
 left: 0px;
 top: 0px;
-
 }
 ul {
 list-style-type: none;
@@ -22,4 +21,8 @@ text-decoration: none;
 li {
 display: inline;
 color: white;
+}
+
+#form{
+    border: 1px black solid;
 }
