--- a/views/login.erb
+++ b/views/login.erb
@@ -2,10 +2,26 @@
 <%= flash[:error]%>
 <% end %>
 
+<link rel="stylesheet" href="profile.css">
+ <div id="logo">
+        <img src="Team App.png" alt="logo" style=" width: 100px; height:100px">
+ 
+    </div>
+  <div id="nav">
+<ul>
+ <li><a href="/"style="color: #0552f7">Home</a></li>
+ <li><a href="/profile"style="color: #0552f7">Profile</a></li>
+  <li><a href="/signup"style="color: #0552f7">SignUp</a></li>
+ <li><a href="/login"style="color: #0552f7">LogIn</a></li>
+</ul>
+</div>
+
+   
+<div id="form">
 <h1>Login</h1>
 <form class="login" action="/login" method="post">
   <input type="email" name="email" placeholder="email"><br>
   <input type="password" name="password" placeholder="password"><br>
   <input type="submit" value="submit" action="/login"><br>
-
 </form>
+</div>
