--- a/views/signup.erb
+++ b/views/signup.erb
@@ -2,6 +2,19 @@
 <% if flash[:error]%>
 <%= flash[:error]%>
 <% end %>
+<link rel="stylesheet" href="profile.css">
+ <div id="logo">
+        <img src="Team App.png" alt="logo" style=" width: 100px; height:100px">
+    </div>
+    <div id="nav">
+    <ul>
+     <li><a href="/"style="color: #0552f7">Home</a></li>
+     <li><a href="/profile"style="color: #0552f7">Profile</a></li>
+      <li><a href="/signup"style="color: #0552f7">SignUp</a></li>
+     <li><a href="/login"style="color: #0552f7">LogIn</a></li>
+    </ul>
+    </div>
+<div id="form2">
 <form class="User"  action="/signup" method="post">
 <input type="text" placeholder="Enter Your First Name" name="user[name]"><br>
 <input type="email" placeholder="Enter Email" name="user[email]"><br>
@@ -9,3 +22,4 @@
 <input type="text" placeholder="Enter Birthday" name="user[birthday]"><br>
 <input type="submit"  value="submit"><br>
 </form>
+</div>
