--- a/views/signup.erb
+++ b/views/signup.erb
@@ -19,7 +19,7 @@
 <input type="text" placeholder="Enter Your First Name" name="user[name]"><br>
 <input type="email" placeholder="Enter Email" name="user[email]"><br>
 <input type="password" placeholder="Create Password" name="user[password]"><br>
-<input type="text" placeholder="Enter Birthday" name="user[birthday]"><br>
+<input type="date" placeholder="Enter Birthday" name="user[birthday]"><br>
 <input type="submit"  value="submit"><br>
 </form>
 </div>
