--- a/views/home.erb
+++ b/views/home.erb
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>  
+<html>
 <head>
-    <link rel="stylesheet" href="main.css">  
-    <div id="logo">
+    <link rel="stylesheet" href="main.css">
+<div id="logo">
         <img src="Team App (2).png" alt="logo" style=" width: 170px; height:170px">
+</div>
 </head>
 <body>
-</div>
+
     <div id="nav">
 <ul>
  <li><a href="/"style="color: white">Home</a></li>
  <li><a href="/profile"style="color: white">Profile</a></li>
+ <% if !session[:user_id] %>
  <li><a href="/signup"style="color: white">SignUp</a></li>
  <li><a href="/login"style="color: white">LogIn</a></li>
+  <% end %>
+  <% if session[:user_id] %>
+  <a href="/logout"style="color: white">LogOut</a>
 </ul>
 </div>
-   
+  <% end %>
+
 </body>
     </html>
